--- a/marcador.html
+++ b/marcador.html
@@ -1,66 +1,118 @@
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Marcador GameSetGo</title>
+  <title>GameSetGo Marcador</title>
   <style>
     body {
       margin: 0;
-      background-color: #002b56;
-      color: white;
+      background-color: #003366;
       font-family: Arial, sans-serif;
+      color: white;
       display: flex;
-      flex-direction: column;
-      align-items: center;
       justify-content: center;
+      align-items: center;
       height: 100vh;
     }
-    .scoreboard {
-      display: grid;
-      grid-template-columns: 1fr 0.5fr 0.5fr 0.5fr;
-      gap: 1rem;
-      font-size: 2.5rem;
-      text-align: center;
-      background-color: #014a92;
+    .container {
+      background-color: #00bfff;
       padding: 2rem;
       border-radius: 10px;
-      box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
+      width: 90%;
+      max-width: 1000px;
+      box-shadow: 0 0 15px rgba(0, 0, 0, 0.4);
     }
-    .header {
-      font-weight: bold;
+    .header, .footer {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 1rem;
       font-size: 1.5rem;
-      text-transform: uppercase;
+    }
+    .footer {
+      margin-top: 2rem;
+      font-size: 1.8rem;
+      justify-content: center;
+    }
+    .score-table {
+      width: 100%;
+      display: grid;
+      grid-template-columns: 2fr repeat(3, 1fr) 1fr;
+      gap: 1rem;
+      background-color: #00bfff;
+    }
+    .cell, .score-cell {
+      padding: 0.5rem;
+      background-color: white;
+      color: #003366;
+      font-size: 2rem;
+      text-align: center;
+      border-radius: 5px;
     }
     .player-name {
+      text-align: left;
       font-weight: bold;
-      font-size: 2rem;
+      font-size: 1.5rem;
+    }
+    .underline-blue { border-bottom: 4px solid #003366; }
+    .underline-red { border-bottom: 4px solid #ff0000; }
+    .dot { height: 16px; width: 16px; background-color: #00ff00; border-radius: 50%; display: inline-block; margin-left: 10px; }
+    .set-labels {
+      display: grid;
+      grid-template-columns: 2fr repeat(3, 1fr) 1fr;
+      text-align: center;
+      font-weight: bold;
+      color: #003366;
+      margin-bottom: 0.5rem;
     }
   </style>
 </head>
 <body>
-  <div class="scoreboard">
-    <div class="header">Jugador</div>
-    <div class="header">Set</div>
-    <div class="header">Game</div>
-    <div class="header">Puntos</div>
+  <div class="container">
+    <div class="header">
+      <div><strong>Partido</strong></div>
+      <div>Logo de club</div>
+      <div id="hora">--:--</div>
+    </div>
 
-    <div class="player-name" id="player1Name">Jugador 1</div>
-    <div id="player1Sets">0</div>
-    <div id="player1Games">0</div>
-    <div id="player1Points">0</div>
+    <div class="set-labels">
+      <div></div>
+      <div>Set 1</div>
+      <div>Set 2</div>
+      <div>Set 3</div>
+      <div>Puntos</div>
+    </div>
 
-    <div class="player-name" id="player2Name">Jugador 2</div>
-    <div id="player2Sets">0</div>
-    <div id="player2Games">0</div>
-    <div id="player2Points">0</div>
+    <div class="score-table">
+      <div class="player-name underline-blue" id="p1_name1">Nombre</div>
+      <div class="cell" id="p1_set1">0</div>
+      <div class="cell" id="p1_set2">0</div>
+      <div class="cell" id="p1_set3">0</div>
+      <div class="score-cell" id="p1_score">0</div>
+
+      <div class="player-name underline-blue" id="p1_name2">Nombre</div>
+      <div class="cell"></div><div class="cell"></div><div class="cell"></div><div class="cell"></div>
+
+      <div class="player-name underline-red" id="p2_name1">Nombre <span id="p2_dot" class="dot" style="display:none;"></span></div>
+      <div class="cell" id="p2_set1">0</div>
+      <div class="cell" id="p2_set2">0</div>
+      <div class="cell" id="p2_set3">0</div>
+      <div class="score-cell" id="p2_score">0</div>
+
+      <div class="player-name underline-red" id="p2_name2">Nombre</div>
+      <div class="cell"></div><div class="cell"></div><div class="cell"></div><div class="cell"></div>
+    </div>
+
+    <div class="footer">
+      <strong>GameSetGo</strong> <span class="dot"></span>
+    </div>
   </div>
 
   <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-database-compat.js"></script>
   <script>
-    const firebaseConfig = {
+    const config = {
       apiKey: "AIzaSyAB7hzQXqsyc8YjBRQ_bT1riCF74u1V4gk",
       authDomain: "gamesetgo-demo.firebaseapp.com",
       databaseURL: "https://gamesetgo-demo-default-rtdb.firebaseio.com",
@@ -69,34 +121,42 @@
       messagingSenderId: "854392080313",
       appId: "1:854392080313:web:77c7abc959cb535e0b5868"
     };
-    const app = firebase.initializeApp(firebaseConfig);
+    const app = firebase.initializeApp(config);
     const db = firebase.database();
 
-    const ui = {
-      player1Name: document.getElementById("player1Name"),
-      player1Sets: document.getElementById("player1Sets"),
-      player1Games: document.getElementById("player1Games"),
-      player1Points: document.getElementById("player1Points"),
-      player2Name: document.getElementById("player2Name"),
-      player2Sets: document.getElementById("player2Sets"),
-      player2Games: document.getElementById("player2Games"),
-      player2Points: document.getElementById("player2Points"),
-    };
+    function actualizarMarcador(data) {
+      document.getElementById("p1_name1").textContent = data.player1.name1;
+      document.getElementById("p1_name2").textContent = data.player1.name2;
+      document.getElementById("p1_set1").textContent = data.player1.sets[0];
+      document.getElementById("p1_set2").textContent = data.player1.sets[1];
+      document.getElementById("p1_set3").textContent = data.player1.sets[2];
+      document.getElementById("p1_score").textContent = data.player1.points_display;
+
+      document.getElementById("p2_name1").textContent = data.player2.name1;
+      document.getElementById("p2_name2").textContent = data.player2.name2;
+      document.getElementById("p2_set1").textContent = data.player2.sets[0];
+      document.getElementById("p2_set2").textContent = data.player2.sets[1];
+      document.getElementById("p2_set3").textContent = data.player2.sets[2];
+      document.getElementById("p2_score").textContent = data.player2.points_display;
+
+      document.getElementById("p2_dot").style.display = data.server === 2 ? "inline-block" : "none";
+    }
 
     db.ref("partido").on("value", (snapshot) => {
       const data = snapshot.val();
       if (!data) return;
-
-      ui.player1Name.textContent = data.player1.name;
-      ui.player1Sets.textContent = data.player1.sets;
-      ui.player1Games.textContent = data.player1.games;
-      ui.player1Points.textContent = data.player1.points_display;
-
-      ui.player2Name.textContent = data.player2.name;
-      ui.player2Sets.textContent = data.player2.sets;
-      ui.player2Games.textContent = data.player2.games;
-      ui.player2Points.textContent = data.player2.points_display;
+      actualizarMarcador(data);
     });
+
+    // Mostrar hora
+    const horaEl = document.getElementById("hora");
+    setInterval(() => {
+      const ahora = new Date();
+      const hh = String(ahora.getHours()).padStart(2, "0");
+      const mm = String(ahora.getMinutes()).padStart(2, "0");
+      horaEl.textContent = `${hh}:${mm}`;
+    }, 1000);
   </script>
 </body>
 </html>
+
