--- a/index.html
+++ b/index.html
@@ -2,30 +2,17 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Marcador GameSetGo</title>
+    <title>Control GameSetGo</title>
     <link rel="stylesheet" href="css/styles.css">
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
 </head>
 <body>
-    <div id="scoreboard">
-        <div class="team" id="team1">
-            <h2 id="team1-name">Equipo 1</h2>
-            <div class="score">
-                <span id="team1-sets">0</span> - 
-                <span id="team1-games">0</span> - 
-                <span id="team1-points">0</span>
-            </div>
-        </div>
-        <div class="team" id="team2">
-            <h2 id="team2-name">Equipo 2</h2>
-            <div class="score">
-                <span id="team2-sets">0</span> - 
-                <span id="team2-games">0</span> - 
-                <span id="team2-points">0</span>
-            </div>
-        </div>
-    </div>
+    <h1>Panel de Control</h1>
+    <button onclick="updateScore('team1', 'points', 1)">+ Punto Equipo 1</button>
+    <button onclick="updateScore('team1', 'points', -1)">- Punto Equipo 1</button>
+    <button onclick="updateScore('team2', 'points', 1)">+ Punto Equipo 2</button>
+    <button onclick="updateScore('team2', 'points', -1)">- Punto Equipo 2</button>
     <script src="../firebase-config.js"></script>
     <script src="js/app.js"></script>
 </body>
